api update - check if user exists
