# src/controllers/repositories.controllers.ts
@@ -1,21 +1,24 @@
 import { getBranchesPromises } from '../utils/repo-helper.utils';
-import { HttpCodes, VCSEntityType } from '../enums';
+import { HttpCodes } from '../enums';
 import { ApiError } from '../errors';
+import config from '../../config';
 import GithubApiService from '../services/github-api-service';
-import type { GithubController, ReposList, ResultingRepos, ResultingRepoPromises } from '../types';
+import type { GithubController, ReposList, ResultingRepos, ResultingRepoPromises, User } from '../types';
 
-const githubController: GithubController = 
+const githubController: GithubController =
     async (req, res, next) => {
-    
-        const { entityName, entityType = VCSEntityType.users, page } = req.params;
-    
+
+        const { entityName, page } = req.params;
+
         if(!entityName) {
             return next(new ApiError('Missing \'entityName\' parameter', HttpCodes.BAD_REQUEST));
         }
 
         try {
-            const data: ReposList = await GithubApiService
-                .getInstance()
+            const githubApiService = GithubApiService.getInstance();
+            const { type }: User = await githubApiService.getUserData({ entityName });
+            const entityType: string = config.gitHubAPI.urls[type];
+            const data: ReposList = await githubApiService
                 .getRepositoriesData({ entityName, entityType, page });
             const reposBranchPromises: ResultingRepoPromises = getBranchesPromises(data);
             const reposWithBranches: ResultingRepos = await Promise.all(reposBranchPromises);
